# pytailwindcss-extra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: codeql.yml
pytailwindcss_extra/: __main__.py  logger.py  main.py
src/pytailwindcss_extra/: __main__.py  logger.py  main.py
tests/: test_main.py
