[project]
name = "pytailwindcss-extra"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" }
]
dependencies = [
    "niquests==3.*",
]
readme = "README.md"
requires-python = ">= 3.8"

line-length = 100

[tool.ruff.lint]
# Rules are explained here: https://docs.astral.sh/ruff/rules
select = ["E4", "E7", "E9", "F", "C", "N", "ANN", "A", "SIM", "PL"]

[project.scripts]
tailwindcss-extra = "pytailwindcss_extra.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytailwindcss_extra"]
