[project]
name = "pytailwindcss-extra"
version = "0.1.0"
description = "Use Tailwind CSS with daisyUI without Node.js and install it via pip."
keywords = ["cli", "tailwind", "css", "daisyui"]
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" }
]
dependencies = [
    "niquests==3.*",
]
readme = "README.md"
license = "LGPL-3.0"
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/2mal3/pytailwindcss-extra"
Repository = "https://github.com/2mal3/pytailwindcss-extra"
Issues = "https://github.com/2mal3/pytailwindcss-extra/issues"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
# Rules are explained here: https://docs.astral.sh/ruff/rules
select = ["E4", "E7", "E9", "F", "C", "N", "ANN", "A", "SIM", "PL"]

[project.scripts]
tailwindcss-extra = "pytailwindcss_extra.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytailwindcss_extra"]
